--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
   "scripts": {
     "test": "jest maxWorkers=4 src",
     "lint": "tslint --project tsconfig.json 'src/**/*.ts'",
-    "format": "prettier --write 'src/**/*.{js,ts,json,md}'"
+    "format": "prettier --write 'src/**/*.{js,ts,json,md}'",
+    "build": "tsc --project tsconfig.json"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn lint && yarn format && yarn test"
+      "pre-commit": "yarn lint && yarn format && yarn test",
+      "pre-push": "yarn build"
     }
   },
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.22",
+    "@types/ramda": "^0.27.36",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
@@ -25,5 +28,8 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "ramda": "^0.27.1"
   }
 }
