--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "jest maxWorkers=4 src",
     "lint": "tslint --project tsconfig.json 'src/**/*.ts'",
     "format": "prettier --write 'src/**/*.{js,ts,json,md}'",
-    "build": "tsc --project tsconfig.json"
+    "build": "tsc --project tsconfig.json",
+    "types": "type-coverage --detail"
   },
   "husky": {
     "hooks": {
@@ -27,6 +28,7 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
+    "type-coverage": "^2.14.9",
     "typescript": "^4.1.3"
   },
   "dependencies": {
