--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.22",
     "@types/ramda": "^0.27.36",
+    "@types/shortid": "^0.0.29",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
@@ -32,6 +33,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "ramda": "^0.27.1"
+    "ramda": "^0.27.1",
+    "shortid": "^2.2.16"
   }
 }
