--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.22",
+    "@types/p-limit": "^2.2.0",
+    "@types/p-map": "^2.0.0",
     "@types/ramda": "^0.27.36",
     "@types/shortid": "^0.0.29",
     "husky": "^4.3.8",
@@ -33,6 +35,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "p-limit": "^3.1.0",
     "ramda": "^0.27.1",
     "shortid": "^2.2.16"
   }
