--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
     "type-coverage": "^2.14.9",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "wait-for-expect": "^3.0.2"
   },
   "dependencies": {
     "p-limit": "^3.1.0",
+    "queue-fifo": "^0.2.6",
     "ramda": "^0.27.1",
     "shortid": "^2.2.16"
   }
