--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Alwaystudios Ltd.",
   "license": "MIT",
   "scripts": {
+    "mem-leak-test": "ts-node --files --project tsconfig.json src/promiseMemoryLeaks",
     "test": "jest maxWorkers=4 src",
     "lint": "tslint --project tsconfig.json 'src/**/*.ts'",
     "format": "prettier --write 'src/**/*.{js,ts,json,md}'",
@@ -28,6 +29,7 @@
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.0",
+    "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "tslint-config-standard": "^9.0.0",
