--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "mem-leak-test": "ts-node --files --project tsconfig.json src/promiseMemoryLeaks",
     "test": "jest maxWorkers=4 src",
-    "lint": "tslint --project tsconfig.json 'src/**/*.ts'",
+    "lint": "yarn eslint . --ext .ts",
     "format": "prettier --write 'src/**/*.{js,ts,json,md}'",
     "build": "tsc --project tsconfig.json",
     "types": "type-coverage --detail"
@@ -25,14 +25,16 @@
     "@types/p-map": "^2.0.0",
     "@types/ramda": "^0.27.36",
     "@types/shortid": "^0.0.29",
+    "@types/superagent": "^4.1.10",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
+    "eslint": "^7.19.0",
+    "eslint-plugin-import": "^2.22.1",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.0",
     "ts-node": "^9.1.1",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-config-standard": "^9.0.0",
     "type-coverage": "^2.14.9",
     "typescript": "^4.1.3",
     "wait-for-expect": "^3.0.2"
@@ -42,6 +44,7 @@
     "p-limit": "^3.1.0",
     "queue-fifo": "^0.2.6",
     "ramda": "^0.27.1",
-    "shortid": "^2.2.16"
+    "shortid": "^2.2.16",
+    "superagent": "^6.1.0"
   }
 }
