--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "wait-for-expect": "^3.0.2"
   },
   "dependencies": {
+    "@databases/mysql": "^5.0.0",
     "level": "^6.0.1",
     "p-limit": "^3.1.0",
     "queue-fifo": "^0.2.6",
