--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "mem-leak-test": "ts-node --files --project tsconfig.json src/promiseMemoryLeaks",
+    "cluster": "ts-node --files --project tsconfig.json src/httpCluster",
     "test": "jest maxWorkers=4 src",
     "lint": "yarn eslint . --ext .ts",
     "format": "prettier --write 'src/**/*.{js,ts,json,md}'",
@@ -43,6 +44,7 @@
     "@databases/mysql": "^5.0.0",
     "level": "^6.0.1",
     "p-limit": "^3.1.0",
+    "portfinder": "^1.0.28",
     "queue-fifo": "^0.2.6",
     "ramda": "^0.27.1",
     "shortid": "^2.2.16",
