--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@databases/mysql": "^5.0.0",
+    "contentful": "^8.3.7",
     "json-rules-engine": "^6.0.0",
     "level": "^6.0.1",
     "p-limit": "^3.1.0",
